--- a/GroceryGo-Android/AndroidManifest.xml
+++ b/GroceryGo-Android/AndroidManifest.xml
@@ -22,15 +22,15 @@
     </supports-screens>
 
     <permission
-        android:name="com.grocerygo.android.GroceryMapView.permission.MAPS_RECEIVE"
+        android:name="ca.grocerygo.android.GroceryMapView.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
 
     <permission
-        android:name="com.grocerygo.android.permission.C2D_MESSAGE"
+        android:name="ca.grocerygo.android.permission.C2D_MESSAGE"
         android:protectionLevel="signature"/>
 
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="ca.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="ca.grocerygo.android.GroceryMapView.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -43,7 +43,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-    <uses-permission android:name="com.groceryotg.android.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="ca.grocerygo.android.permission.C2D_MESSAGE"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -144,8 +144,8 @@
             android:name="ca.grocerygo.android.services.location.LocationServiceReceiver"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.groceryotg.android.services.location.LocationServiceReceiver.LOCATION_SERVICE_RECEIVER_ENABLE"/>
-                <action android:name="com.groceryotg.android.services.location.LocationServiceReceiver.LOCATION_SERVICE_RECEIVER_DISABLE"/>
+                <action android:name="ca.grocerygo.android.services.location.LocationServiceReceiver.LOCATION_SERVICE_RECEIVER_ENABLE"/>
+                <action android:name="ca.grocerygo.android.services.location.LocationServiceReceiver.LOCATION_SERVICE_RECEIVER_DISABLE"/>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
@@ -155,13 +155,13 @@
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-                <category android:name="com.groceryotg.android"/>
+                <category android:name="ca.grocerygo.android"/>
             </intent-filter>
         </receiver>
 
         <provider
             android:name="ca.grocerygo.android.database.contentprovider.GroceryotgProvider"
-            android:authorities="com.grocerygo.android.database.contentprovider"
+            android:authorities="ca.grocerygo.android.database.contentprovider"
             android:exported="false">
         </provider>
 
